{
  "version": 4,
  "terraform_version": "1.15.8",
  "serial": 22,
  "lineage": "e2df8f77-8841-468e-62ed-89d220a990d8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "result_task",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:597936860210:security-group/sg-098f0586d57367f0a",
            "description": "Allow inbound traffic from ALB to Result service and outbound access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic for Aurora PostgreSQL and AWS API access",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-098f0586d57367f0a",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "HTTP inbound traffic from ALB",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-076b09be76e6ac155"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "aca-voting-app-result-task-sg",
            "name_prefix": "",
            "owner_id": "597936860210",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "aca-voting-app-result-task-sg"
            },
            "tags_all": {
              "Application": "aca-voting-app",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "aca-voting-app-result-task-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b0fce02ab20d23a4"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "vpc_id"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_ssm_parameter.vpc_id",
            "module.alb.aws_security_group.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "valkey",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:597936860210:security-group/sg-09cb692e45d5c4e70",
            "description": "Security group for AWS ElastiCache Valkey (Allows Vote and Worker tasks)",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09cb692e45d5c4e70",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Valkey traffic from Vote task",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09ddd75d36a689ae6"
                ],
                "self": false,
                "to_port": 6379
              },
              {
                "cidr_blocks": [],
                "description": "Valkey traffic from Worker task",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d2fde29138deb496"
                ],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "aca-voting-app-valkey-sg",
            "name_prefix": "",
            "owner_id": "597936860210",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "aca-voting-app-valkey-sg"
            },
            "tags_all": {
              "Application": "aca-voting-app",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "aca-voting-app-valkey-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b0fce02ab20d23a4"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "vpc_id"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.vote_task",
            "aws_security_group.worker_task",
            "data.aws_ssm_parameter.vpc_id",
            "module.alb.aws_security_group.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vote_task",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:597936860210:security-group/sg-09ddd75d36a689ae6",
            "description": "Allow inbound traffic from ALB to Vote service and outbound access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic for Valkey and AWS API access",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09ddd75d36a689ae6",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "HTTP inbound traffic from ALB",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-076b09be76e6ac155"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "aca-voting-app-vote-task-sg",
            "name_prefix": "",
            "owner_id": "597936860210",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "aca-voting-app-vote-task-sg"
            },
            "tags_all": {
              "Application": "aca-voting-app",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "aca-voting-app-vote-task-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b0fce02ab20d23a4"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "vpc_id"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_ssm_parameter.vpc_id",
            "module.alb.aws_security_group.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "worker_task",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:597936860210:security-group/sg-0d2fde29138deb496",
            "description": "Background worker service security group (No inbound access required)",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic for Valkey, Aurora PostgreSQL, and AWS API access",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d2fde29138deb496",
            "ingress": [],
            "name": "aca-voting-app-worker-task-sg",
            "name_prefix": "",
            "owner_id": "597936860210",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "aca-voting-app-worker-task-sg"
            },
            "tags_all": {
              "Application": "aca-voting-app",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "aca-voting-app-worker-task-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b0fce02ab20d23a4"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "vpc_id"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_ssm_parameter.vpc_id"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:597936860210:loadbalancer/app/aca-voting-app-alb/8d56328e3d693d02",
            "arn_suffix": "app/aca-voting-app-alb/8d56328e3d693d02",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "aca-voting-app-alb-2040942990.eu-north-1.elb.amazonaws.com",
            "drop_invalid_header_fields": true,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:eu-north-1:597936860210:loadbalancer/app/aca-voting-app-alb/8d56328e3d693d02",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "aca-voting-app-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-076b09be76e6ac155"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-001e0b414a6336eac"
              },
              {
                "subnet_id": "subnet-0c5e252dcafaf9786"
              }
            ],
            "subnets": [
              "subnet-001e0b414a6336eac",
              "subnet-0c5e252dcafaf9786"
            ],
            "tags": {
              "Name": "aca-voting-app-alb",
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "Application": "aca-voting-app",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "aca-voting-app-alb",
              "terraform-aws-modules": "alb"
            },
            "timeouts": {
            },
            "vpc_id": "vpc-0b0fce02ab20d23a4",
            "xff_header_processing_mode": "append",
            "zone_id": "Z23TAZ6LKFMNIO"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "subnets"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_ssm_parameter.public_subnet_ids",
            "data.aws_ssm_parameter.vpc_id",
            "module.alb.aws_security_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "http",
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:597936860210:listener/app/aca-voting-app-alb/8d56328e3d693d02/c11cabe3412f7726",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-north-1:597936860210:listener/app/aca-voting-app-alb/8d56328e3d693d02/c11cabe3412f7726",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-north-1:597936860210:loadbalancer/app/aca-voting-app-alb/8d56328e3d693d02",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {
              "Name": "aca-voting-app-alb",
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "Application": "aca-voting-app",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "aca-voting-app-alb",
              "terraform-aws-modules": "alb"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_acm_certificate.cert",
            "aws_acm_certificate_validation.cert",
            "aws_route53_record.cert_validation",
            "data.aws_ssm_parameter.public_subnet_ids",
            "data.aws_ssm_parameter.route53_zone_id",
            "data.aws_ssm_parameter.vpc_id",
            "module.alb.aws_lb.this",
            "module.alb.aws_lb_target_group.this",
            "module.alb.aws_security_group.this"
          ]
        },
        {
          "index_key": "https",
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:597936860210:listener/app/aca-voting-app-alb/8d56328e3d693d02/16e6e9cff4a2207d",
            "certificate_arn": "arn:aws:acm:eu-north-1:597936860210:certificate/9e020264-788b-43da-ba79-5225851bbf1c",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-north-1:597936860210:targetgroup/vote-20260919205358500300000006/e0ab9b922a96d772",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-north-1:597936860210:listener/app/aca-voting-app-alb/8d56328e3d693d02/16e6e9cff4a2207d",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-north-1:597936860210:loadbalancer/app/aca-voting-app-alb/8d56328e3d693d02",
            "mutual_authentication": [
              {
                "advertise_trust_store_ca_names": "",
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": "",
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": "",
            "routing_http_request_x_amzn_tls_version_header_name": "",
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "ELBSecurityPolicy-TLS13-1-2-Res-2021-06",
            "tags": {
              "Name": "aca-voting-app-alb",
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "Application": "aca-voting-app",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "aca-voting-app-alb",
              "terraform-aws-modules": "alb"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_acm_certificate.cert",
            "aws_acm_certificate_validation.cert",
            "aws_route53_record.cert_validation",
            "data.aws_ssm_parameter.public_subnet_ids",
            "data.aws_ssm_parameter.route53_zone_id",
            "data.aws_ssm_parameter.vpc_id",
            "module.alb.aws_lb.this",
            "module.alb.aws_lb_target_group.this",
            "module.alb.aws_security_group.this"
          ]
        },
        {
          "index_key": "result_https",
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:597936860210:listener/app/aca-voting-app-alb/8d56328e3d693d02/293854faf4ae49db",
            "certificate_arn": "arn:aws:acm:eu-north-1:597936860210:certificate/9e020264-788b-43da-ba79-5225851bbf1c",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-north-1:597936860210:targetgroup/rslt-20260919205358523300000007/dff490837c2471ad",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-north-1:597936860210:listener/app/aca-voting-app-alb/8d56328e3d693d02/293854faf4ae49db",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-north-1:597936860210:loadbalancer/app/aca-voting-app-alb/8d56328e3d693d02",
            "mutual_authentication": [
              {
                "advertise_trust_store_ca_names": "",
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 8443,
            "protocol": "HTTPS",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": "",
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": "",
            "routing_http_request_x_amzn_tls_version_header_name": "",
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "ELBSecurityPolicy-TLS13-1-2-Res-2021-06",
            "tags": {
              "Name": "aca-voting-app-alb",
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "Application": "aca-voting-app",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "aca-voting-app-alb",
              "terraform-aws-modules": "alb"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_acm_certificate.cert",
            "aws_acm_certificate_validation.cert",
            "aws_route53_record.cert_validation",
            "data.aws_ssm_parameter.public_subnet_ids",
            "data.aws_ssm_parameter.route53_zone_id",
            "data.aws_ssm_parameter.vpc_id",
            "module.alb.aws_lb.this",
            "module.alb.aws_lb_target_group.this",
            "module.alb.aws_security_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "https/result_host",
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-north-1:597936860210:targetgroup/rslt-20260919205358523300000007/dff490837c2471ad",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:597936860210:listener-rule/app/aca-voting-app-alb/8d56328e3d693d02/16e6e9cff4a2207d/f8c4fe49ed8f241a",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "result.sergey.c-loud.am"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-north-1:597936860210:listener-rule/app/aca-voting-app-alb/8d56328e3d693d02/16e6e9cff4a2207d/f8c4fe49ed8f241a",
            "listener_arn": "arn:aws:elasticloadbalancing:eu-north-1:597936860210:listener/app/aca-voting-app-alb/8d56328e3d693d02/16e6e9cff4a2207d",
            "priority": 1,
            "tags": {
              "Name": "aca-voting-app-alb",
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "Application": "aca-voting-app",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "aca-voting-app-alb",
              "terraform-aws-modules": "alb"
            }
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_acm_certificate.cert",
            "aws_acm_certificate_validation.cert",
            "aws_route53_record.cert_validation",
            "data.aws_ssm_parameter.public_subnet_ids",
            "data.aws_ssm_parameter.route53_zone_id",
            "data.aws_ssm_parameter.vpc_id",
            "module.alb.aws_lb.this",
            "module.alb.aws_lb_listener.this",
            "module.alb.aws_lb_target_group.this",
            "module.alb.aws_security_group.this"
          ]
        },
        {
          "index_key": "https/vote_host",
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-north-1:597936860210:targetgroup/vote-20260919205358500300000006/e0ab9b922a96d772",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:597936860210:listener-rule/app/aca-voting-app-alb/8d56328e3d693d02/16e6e9cff4a2207d/f03aa45234da2913",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "vote.sergey.c-loud.am"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-north-1:597936860210:listener-rule/app/aca-voting-app-alb/8d56328e3d693d02/16e6e9cff4a2207d/f03aa45234da2913",
            "listener_arn": "arn:aws:elasticloadbalancing:eu-north-1:597936860210:listener/app/aca-voting-app-alb/8d56328e3d693d02/16e6e9cff4a2207d",
            "priority": 2,
            "tags": {
              "Name": "aca-voting-app-alb",
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "Application": "aca-voting-app",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "aca-voting-app-alb",
              "terraform-aws-modules": "alb"
            }
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_acm_certificate.cert",
            "aws_acm_certificate_validation.cert",
            "aws_route53_record.cert_validation",
            "data.aws_ssm_parameter.public_subnet_ids",
            "data.aws_ssm_parameter.route53_zone_id",
            "data.aws_ssm_parameter.vpc_id",
            "module.alb.aws_lb.this",
            "module.alb.aws_lb_listener.this",
            "module.alb.aws_lb_target_group.this",
            "module.alb.aws_security_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "result",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:597936860210:targetgroup/rslt-20260919205358523300000007/dff490837c2471ad",
            "arn_suffix": "targetgroup/rslt-20260919205358523300000007/dff490837c2471ad",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 15,
                "matcher": "200-399",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-north-1:597936860210:targetgroup/rslt-20260919205358523300000007/dff490837c2471ad",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:eu-north-1:597936860210:loadbalancer/app/aca-voting-app-alb/8d56328e3d693d02"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "rslt-20260919205358523300000007",
            "name_prefix": "rslt-",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "aca-voting-app-alb",
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "Application": "aca-voting-app",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "aca-voting-app-alb",
              "terraform-aws-modules": "alb"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0b0fce02ab20d23a4"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "vpc_id"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_ssm_parameter.vpc_id"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "vote",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:597936860210:targetgroup/vote-20260919205358500300000006/e0ab9b922a96d772",
            "arn_suffix": "targetgroup/vote-20260919205358500300000006/e0ab9b922a96d772",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 15,
                "matcher": "200-399",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-north-1:597936860210:targetgroup/vote-20260919205358500300000006/e0ab9b922a96d772",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:eu-north-1:597936860210:loadbalancer/app/aca-voting-app-alb/8d56328e3d693d02"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "vote-20260919205358500300000006",
            "name_prefix": "vote-",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "aca-voting-app-alb",
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "Application": "aca-voting-app",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "aca-voting-app-alb",
              "terraform-aws-modules": "alb"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0b0fce02ab20d23a4"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "vpc_id"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_ssm_parameter.vpc_id"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "additional",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:597936860210:security-group/sg-076b09be76e6ac155",
            "description": "Security group for aca-voting-app-alb application load balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-076b09be76e6ac155",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP traffic for redirect to HTTPS",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS secondary port for Result app",
                "from_port": 8443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS secure web traffic for Vote and Result apps",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "aca-voting-app-alb-20260919205358477800000005",
            "name_prefix": "aca-voting-app-alb-",
            "owner_id": "597936860210",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "aca-voting-app-alb",
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "Application": "aca-voting-app",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "aca-voting-app-alb",
              "terraform-aws-modules": "alb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b0fce02ab20d23a4"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "vpc_id"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_ssm_parameter.vpc_id"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "all",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:597936860210:security-group-rule/sgr-079f23af0e36ba1a7",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-079f23af0e36ba1a7",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-076b09be76e6ac155",
            "security_group_rule_id": "sgr-079f23af0e36ba1a7",
            "tags": {
              "Name": "aca-voting-app-alb",
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "Application": "aca-voting-app",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "aca-voting-app-alb",
              "terraform-aws-modules": "alb"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_ssm_parameter.vpc_id",
            "module.alb.aws_security_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "http_80",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:597936860210:security-group-rule/sgr-0ec18ada1813bc428",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "HTTP traffic for redirect to HTTPS",
            "from_port": 80,
            "id": "sgr-0ec18ada1813bc428",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-076b09be76e6ac155",
            "security_group_rule_id": "sgr-0ec18ada1813bc428",
            "tags": {
              "Name": "aca-voting-app-alb",
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "Application": "aca-voting-app",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "aca-voting-app-alb",
              "terraform-aws-modules": "alb"
            },
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_ssm_parameter.vpc_id",
            "module.alb.aws_security_group.this"
          ]
        },
        {
          "index_key": "https_443",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:597936860210:security-group-rule/sgr-0bdf43c28c4a2d003",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "HTTPS secure web traffic for Vote and Result apps",
            "from_port": 80,
            "id": "sgr-0bdf43c28c4a2d003",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-076b09be76e6ac155",
            "security_group_rule_id": "sgr-0bdf43c28c4a2d003",
            "tags": {
              "Name": "aca-voting-app-alb",
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "Application": "aca-voting-app",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "aca-voting-app-alb",
              "terraform-aws-modules": "alb"
            },
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_ssm_parameter.vpc_id",
            "module.alb.aws_security_group.this"
          ]
        },
        {
          "index_key": "https_8443",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:597936860210:security-group-rule/sgr-0116fe45353b9b782",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "HTTPS secondary port for Result app",
            "from_port": 8443,
            "id": "sgr-0116fe45353b9b782",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-076b09be76e6ac155",
            "security_group_rule_id": "sgr-0116fe45353b9b782",
            "tags": {
              "Name": "aca-voting-app-alb",
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "Application": "aca-voting-app",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "aca-voting-app-alb",
              "terraform-aws-modules": "alb"
            },
            "to_port": 8443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_ssm_parameter.vpc_id",
            "module.alb.aws_security_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.aurora",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:597936860210:security-group/sg-0a25291ebe1147318",
            "description": "Control traffic to/from RDS Aurora aca-voting-app-aurora",
            "egress": [],
            "id": "sg-0a25291ebe1147318",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow PostgreSQL traffic from Result task",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-098f0586d57367f0a"
                ],
                "self": false,
                "to_port": 5432
              },
              {
                "cidr_blocks": [],
                "description": "Allow PostgreSQL traffic from Worker task",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d2fde29138deb496"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "aca-voting-app-aurora-20260919205358251600000003",
            "name_prefix": "aca-voting-app-aurora-",
            "owner_id": "597936860210",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "aca-voting-app-aurora"
            },
            "tags_all": {
              "Application": "aca-voting-app",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "aca-voting-app-aurora"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b0fce02ab20d23a4"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "vpc_id"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_ssm_parameter.vpc_id"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.aurora",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "result_ingress",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow PostgreSQL traffic from Result task",
            "from_port": 5432,
            "id": "sgrule-3815097738",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0a25291ebe1147318",
            "security_group_rule_id": "sgr-023bcc65b70fa317a",
            "self": false,
            "source_security_group_id": "sg-098f0586d57367f0a",
            "timeouts": null,
            "to_port": 5432,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.result_task",
            "aws_security_group.worker_task",
            "data.aws_ssm_parameter.vpc_id",
            "module.alb.aws_security_group.this",
            "module.aurora.aws_security_group.this"
          ]
        },
        {
          "index_key": "worker_ingress",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow PostgreSQL traffic from Worker task",
            "from_port": 5432,
            "id": "sgrule-1091764110",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0a25291ebe1147318",
            "security_group_rule_id": "sgr-0cdce97f8ce1c9607",
            "self": false,
            "source_security_group_id": "sg-0d2fde29138deb496",
            "timeouts": null,
            "to_port": 5432,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.result_task",
            "aws_security_group.worker_task",
            "data.aws_ssm_parameter.vpc_id",
            "module.alb.aws_security_group.this",
            "module.aurora.aws_security_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.valkey",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.valkey",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.valkey",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    }
  ]
}